--- a/EA Waste Tonnage Returns/Logic Workflows/DMS/Upload Email To DMS.xaml
+++ b/EA Waste Tonnage Returns/Logic Workflows/DMS/Upload Email To DMS.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Upload_Email_To_DMS" this:Upload_Email_To_DMS.IN_strFullPermitNumber="68506" this:Upload_Email_To_DMS.IN_strReturnYear="2019" this:Upload_Email_To_DMS.IN_strReturnPeriodForRename="Jul to Sep" this:Upload_Email_To_DMS.IN_strDocumentUrl="/sites/EADMSRobotics1/LIB1/68506/Returns/Compliance Waste Returns Jul to Sep 2019 - Email and Submission.msg" this:Upload_Email_To_DMS.IN_strDocumentFilePath="C:\Users\Mewinter\Desktop\Working Directory\Email.msg" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:ss="clr-namespace:System.Security;assembly=mscorlib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:us="clr-namespace:UiPathTeam.SharePoint;assembly=UiPathTeam.SharePoint" xmlns:usa="clr-namespace:UiPathTeam.SharePoint.Activities;assembly=UiPathTeam.SharePoint.Activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Upload_Email_To_DMS" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:ss="clr-namespace:System.Security;assembly=mscorlib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:us="clr-namespace:UiPathTeam.SharePoint;assembly=UiPathTeam.SharePoint" xmlns:usa="clr-namespace:UiPathTeam.SharePoint.Activities;assembly=UiPathTeam.SharePoint.Activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="IN_dictConfig" Type="InArgument(scg:Dictionary(x:String, ui:GenericValue))" />
     <x:Property Name="IN_strDMSUsername" Type="InArgument(x:String)" />
@@ -6,10 +6,13 @@
     <x:Property Name="IN_strFullPermitNumber" Type="InArgument(x:String)" />
     <x:Property Name="IN_strReturnYear" Type="InArgument(x:String)" />
     <x:Property Name="IN_strReturnPeriodForRename" Type="InArgument(x:String)" />
-    <x:Property Name="IN_strDocumentUrl" Type="InArgument(x:String)" />
     <x:Property Name="IN_strDocumentFilePath" Type="InArgument(x:String)" />
     <x:Property Name="OUT_strFlow" Type="OutArgument(x:String)" />
     <x:Property Name="OUT_strReasonForStoppingRobot" Type="OutArgument(x:String)" />
+    <x:Property Name="IN_strDocumentDate" Type="InArgument(x:String)" />
+    <x:Property Name="IN_strReceivedDate" Type="InArgument(x:String)" />
+    <x:Property Name="IN_strExternalAuthor" Type="InArgument(x:String)" />
+    <x:Property Name="IN_strDisclosureStatus" Type="InArgument(x:String)" />
   </x:Members>
   <this:Upload_Email_To_DMS.IN_dictConfig>
     <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" />
@@ -20,6 +23,18 @@
   <this:Upload_Email_To_DMS.IN_strDMSPassword>
     <InArgument x:TypeArguments="ss:SecureString" />
   </this:Upload_Email_To_DMS.IN_strDMSPassword>
+  <this:Upload_Email_To_DMS.IN_strDocumentDate>
+    <InArgument x:TypeArguments="x:String" />
+  </this:Upload_Email_To_DMS.IN_strDocumentDate>
+  <this:Upload_Email_To_DMS.IN_strReceivedDate>
+    <InArgument x:TypeArguments="x:String" />
+  </this:Upload_Email_To_DMS.IN_strReceivedDate>
+  <this:Upload_Email_To_DMS.IN_strExternalAuthor>
+    <InArgument x:TypeArguments="x:String" />
+  </this:Upload_Email_To_DMS.IN_strExternalAuthor>
+  <this:Upload_Email_To_DMS.IN_strDisclosureStatus>
+    <InArgument x:TypeArguments="x:String" />
+  </this:Upload_Email_To_DMS.IN_strDisclosureStatus>
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
@@ -90,6 +105,7 @@
       <Variable x:TypeArguments="x:String" Name="strReturnFolderUrl" />
       <Variable x:TypeArguments="x:String" Name="strUpdatedDocumentName" />
       <Variable x:TypeArguments="x:String" Name="strContinue" />
+      <Variable x:TypeArguments="x:String" Name="strDocumentUrl" />
     </Flowchart.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -130,16 +146,36 @@
             </sap:WorkflowViewStateService.ViewState>
             <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Upload File To DMS Workflow" sap:VirtualizedContainerService.HintSize="357,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="Data Workflows\DMS\Upload File To DMS.xaml">
               <ui:InvokeWorkflowFile.Arguments>
-                <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">[IN_dictConfig]</InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSHomeUrl">[strDMSHomeUrl]</InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSUsername">[IN_strDMSUsername]</InArgument>
-                <InArgument x:TypeArguments="ss:SecureString" x:Key="IN_strDMSPassword">[IN_strDMSPassword]</InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="IN_strReturnFolderUrl">[strReturnFolderUrl]</InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="IN_strFullPermitNumber">[IN_strFullPermitNumber]</InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSSiteUrl">[strDMSSiteUrl]</InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="IN_strDocumentUrl">[IN_strDocumentUrl]</InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="IN_strDocumentFilePath">[IN_strDocumentFilePath]</InArgument>
-                <OutArgument x:TypeArguments="ui:Browser" x:Key="OUT_browserDMS">[browserDMS]</OutArgument>
+                <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">
+                  <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" ExpressionText="IN_dictConfig" />
+                </InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSHomeUrl">
+                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strDMSHomeUrl" />
+                </InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSUsername">
+                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="IN_strDMSUsername" />
+                </InArgument>
+                <InArgument x:TypeArguments="ss:SecureString" x:Key="IN_strDMSPassword">
+                  <mva:VisualBasicValue x:TypeArguments="ss:SecureString" ExpressionText="IN_strDMSPassword" />
+                </InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="IN_strReturnFolderUrl">
+                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strReturnFolderUrl" />
+                </InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="IN_strFullPermitNumber">
+                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="IN_strFullPermitNumber" />
+                </InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSSiteUrl">
+                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strDMSSiteUrl" />
+                </InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="IN_strDocumentUrl">
+                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strDocumentUrl" />
+                </InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="IN_strDocumentFilePath">
+                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="IN_strDocumentFilePath" />
+                </InArgument>
+                <OutArgument x:TypeArguments="ui:Browser" x:Key="OUT_browserDMS">
+                  <mva:VisualBasicReference x:TypeArguments="ui:Browser" ExpressionText="browserDMS" />
+                </OutArgument>
               </ui:InvokeWorkflowFile.Arguments>
             </ui:InvokeWorkflowFile>
             <Assign DisplayName="Reset Retry Counter" sap:VirtualizedContainerService.HintSize="357,60" sap2010:WorkflowViewState.IdRef="Assign_4">
@@ -273,7 +309,7 @@
                           <av:PointCollection x:Key="ConnectorLocation">170,865.5 170,916.5</av:PointCollection>
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
-                      <TryCatch DisplayName="Try Input File Properties" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="TryCatch_3">
+                      <TryCatch DisplayName="Try Input File Properties" sap:VirtualizedContainerService.HintSize="438,531" sap2010:WorkflowViewState.IdRef="TryCatch_3">
                         <sap:WorkflowViewStateService.ViewState>
                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
                             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -288,15 +324,33 @@
                             </sap:WorkflowViewStateService.ViewState>
                             <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Input File Properties Workflow" sap:VirtualizedContainerService.HintSize="358,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="Data Workflows\DMS\Input File Properties.xaml">
                               <ui:InvokeWorkflowFile.Arguments>
-                                <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">[IN_dictConfig]</InArgument>
-                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSHomeUrl">[strDMSHomeUrl]</InArgument>
-                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSUsername">[IN_strDMSUsername]</InArgument>
-                                <InArgument x:TypeArguments="ss:SecureString" x:Key="IN_strDMSPassword">[IN_strDMSPassword]</InArgument>
-                                <InArgument x:TypeArguments="ui:Browser" x:Key="IN_browserDMS">[browserDMS]</InArgument>
-                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDocumentDate">15/04/2021</InArgument>
-                                <InArgument x:TypeArguments="x:String" x:Key="IN_strReceivedDate">15/04/2021</InArgument>
-                                <InArgument x:TypeArguments="x:String" x:Key="IN_strExternalAuthor">Marcey Winter</InArgument>
-                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDisclosureStatus">Internal Only</InArgument>
+                                <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">
+                                  <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" ExpressionText="IN_dictConfig" />
+                                </InArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSHomeUrl">
+                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strDMSHomeUrl" />
+                                </InArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSUsername">
+                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="IN_strDMSUsername" />
+                                </InArgument>
+                                <InArgument x:TypeArguments="ss:SecureString" x:Key="IN_strDMSPassword">
+                                  <mva:VisualBasicValue x:TypeArguments="ss:SecureString" ExpressionText="IN_strDMSPassword" />
+                                </InArgument>
+                                <InArgument x:TypeArguments="ui:Browser" x:Key="IN_browserDMS">
+                                  <mva:VisualBasicValue x:TypeArguments="ui:Browser" ExpressionText="browserDMS" />
+                                </InArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDocumentDate">
+                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="IN_strDocumentDate" />
+                                </InArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strReceivedDate">
+                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="IN_strReceivedDate" />
+                                </InArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strExternalAuthor">
+                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="IN_strExternalAuthor" />
+                                </InArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDisclosureStatus">
+                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="IN_strDisclosureStatus" />
+                                </InArgument>
                               </ui:InvokeWorkflowFile.Arguments>
                             </ui:InvokeWorkflowFile>
                             <Assign DisplayName="Reset Retry Counter" sap:VirtualizedContainerService.HintSize="358,60" sap2010:WorkflowViewState.IdRef="Assign_8">
@@ -1069,7 +1123,7 @@
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
         </ui:CommentOut>
-        <Sequence sap:VirtualizedContainerService.HintSize="484,352" sap2010:WorkflowViewState.IdRef="Sequence_2">
+        <Sequence sap:VirtualizedContainerService.HintSize="484,452" sap2010:WorkflowViewState.IdRef="Sequence_2">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -1097,6 +1151,14 @@
             </Assign.To>
             <Assign.Value>
               <InArgument x:TypeArguments="x:String">[String.Format(IN_dictConfig("DMSEmailTitle"), IN_strReturnPeriodForRename, IN_strReturnYear) + ".msg"]</InArgument>
+            </Assign.Value>
+          </Assign>
+          <Assign sap:VirtualizedContainerService.HintSize="262,60" sap2010:WorkflowViewState.IdRef="Assign_25">
+            <Assign.To>
+              <OutArgument x:TypeArguments="x:String">[strDocumentUrl]</OutArgument>
+            </Assign.To>
+            <Assign.Value>
+              <InArgument x:TypeArguments="x:String">[String.Format(IN_dictConfig("DMSDocumentUrl"), IN_strFullPermitNumber, strUpdatedDocumentName)]</InArgument>
             </Assign.Value>
           </Assign>
         </Sequence>
